handling pfps in fs
